age calculator added

--- a/Projects/Age_Calculator/index.html
+++ b/Projects/Age_Calculator/index.html
@@ -26,8 +26,14 @@
                 Days
                 <span></span>
             </div>
-            <div class="weeks"></div>
-            <div class="totalDay"></div>
+            <div class="weeks">
+                Total Weeks
+                <span></span>
+            </div>
+            <div class="totalDay">
+                Total days
+                <span></span>
+            </div>
         </div>
 
     </main>
