--- a/Projects/priceRange_Slider/index.html
+++ b/Projects/priceRange_Slider/index.html
@@ -7,10 +7,27 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+     <main>
+        <h1>PRICE SLIDER</h1>
+        <div class="price-display">
+            <div class="min">
+                <p>MIN</p>
+                <input type="number" min="0" max="1000" name="" id="">
+            </div>
+            <h2>-</h2>
+            <div class="max">
+                <p>MAX</p>
+                <input type="number" min="0" max="1000" name="" id="">
+            </div>
+        </div>
+        <!-- slider -->
+        <div class="slider">
+            <input type="range" value="0" min="0" max="60" name="" id="">
+        </div>
+        <button>DONE</button>
+     </main>
 
     
-
-
     <script type="module" src="script.js"></script>
 </body>
 </html>
