--- a/Projects/Github_Profile_search/index.html
+++ b/Projects/Github_Profile_search/index.html
@@ -7,7 +7,40 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-
+    <main>
+        <div class="search">
+            <label for="user_name">Enter User Name</label>
+            <input type="text" name="user_name" id="user_name" placeholder="Username">
+            <p class="message"></p>
+            <button>Search</button>
+        </div>
+        <div class="result">
+            <div class="img">
+                <img src="" alt="">
+            </div>
+            <h4>Amanjeet</h4>
+            <table>
+               
+                <tbody>
+                    <caption>INFORMATION</caption>
+                    <tr>
+                        <th>
+                            Type
+                        </th>
+                        <th>Data</th>
+                    </tr>
+                    <tr>
+                        <td>Email</td>
+                        <td>Kumaramanjeet@gmail.com</td>
+                    </tr>
+                    <tr>
+                        <td>Repos</td>
+                        <td>18</td>
+                    </tr>
+                </tbody>
+            </table>
+        </div>
+    </main>
     
 
 
