Todo LocalStorage Addeed

--- a/Projects/Local_Storage/index.html
+++ b/Projects/Local_Storage/index.html
@@ -8,11 +8,13 @@
 </head>
 <body>
     <h1>Enter List Iteam Here</h1>
-    <input type="text">
+    <input type="text" required >
+    <div class="massage"></div>
     <button id="add">Add</button>
-    <ul class="li">
-        <li>All</li>
+    <button id="clear">All clear</button>
+    <p>All</p>
         <hr>
+    <ul class="li">
     </ul>
 
     <script src="script.js"></script>
