--- a/Projects/paragraph_generator/index.html
+++ b/Projects/paragraph_generator/index.html
@@ -7,7 +7,12 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-
+    <div class="container">
+        <h1>Random Paragraph Generator</h1>
+        <label for="numParagraphs">Number of Paragraphs:</label>
+        <input type="number" id="numParagraphs" min="1" max="10" value="1">
+        <button id="generateBtn">Generate</button>
+        <div id="output"></div>
     
 
 
